@@ -8,18 +8,6 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "create_CLUT_profile_from_pr
 		{A6480823-31F6-41FE-AA64-D11B1AF8B3FF} = {A6480823-31F6-41FE-AA64-D11B1AF8B3FF}
 	EndProjectSection
 EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "create_CLUT_profile", "E:\AccuRevWS\pshop-dev-eng\Color\SampleICC\Contrib\CmdLine\create_CLUT_profile\create_CLUT_profile.vcproj", "{16326F94-522C-4C2A-9FCE-56828AF23C8B}"
-	ProjectSection(ProjectDependencies) = postProject
-		{A6480823-31F6-41FE-AA64-D11B1AF8B3FF} = {A6480823-31F6-41FE-AA64-D11B1AF8B3FF}
-		{938C1BE6-F759-44BB-85C2-60FC413D5AD2} = {938C1BE6-F759-44BB-85C2-60FC413D5AD2}
-	EndProjectSection
-EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "create_display_profile", "E:\AccuRevWS\pshop-dev-eng\Color\SampleICC\Contrib\CmdLine\create_display_profile\create_display_profile.vcproj", "{45AFC99C-232B-45F6-B0D8-6697D4306366}"
-	ProjectSection(ProjectDependencies) = postProject
-		{A6480823-31F6-41FE-AA64-D11B1AF8B3FF} = {A6480823-31F6-41FE-AA64-D11B1AF8B3FF}
-		{938C1BE6-F759-44BB-85C2-60FC413D5AD2} = {938C1BE6-F759-44BB-85C2-60FC413D5AD2}
-	EndProjectSection
-EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "flatten_AToB_tag", "..\tests\flatten_AToB_tag\flatten_AToB_tag.vcproj", "{EDC0A2BE-50FE-4DE2-ADD6-DC87F4FBCDCC}"
 	ProjectSection(ProjectDependencies) = postProject
 		{A6480823-31F6-41FE-AA64-D11B1AF8B3FF} = {A6480823-31F6-41FE-AA64-D11B1AF8B3FF}
@@ -50,6 +38,18 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "create_pretransform_curve",
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "IccUtilsLib", "..\ICC_utils\ICC_utils.vcproj", "{938C1BE6-F759-44BB-85C2-60FC413D5AD2}"
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "create_CLUT_profile", "..\CmdLine\create_CLUT_profile\create_CLUT_profile.vcproj", "{16326F94-522C-4C2A-9FCE-56828AF23C8B}"
+	ProjectSection(ProjectDependencies) = postProject
+		{938C1BE6-F759-44BB-85C2-60FC413D5AD2} = {938C1BE6-F759-44BB-85C2-60FC413D5AD2}
+		{A6480823-31F6-41FE-AA64-D11B1AF8B3FF} = {A6480823-31F6-41FE-AA64-D11B1AF8B3FF}
+	EndProjectSection
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "create_display_profile", "..\CmdLine\create_display_profile\create_display_profile.vcproj", "{45AFC99C-232B-45F6-B0D8-6697D4306366}"
+	ProjectSection(ProjectDependencies) = postProject
+		{A6480823-31F6-41FE-AA64-D11B1AF8B3FF} = {A6480823-31F6-41FE-AA64-D11B1AF8B3FF}
+		{938C1BE6-F759-44BB-85C2-60FC413D5AD2} = {938C1BE6-F759-44BB-85C2-60FC413D5AD2}
+	EndProjectSection
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -119,70 +119,6 @@ Global
 		{663208AE-BA89-4C2D-BC91-12FB1D000585}.Universal Unicode Debug|Win32.Build.0 = Debug|Win32
 		{663208AE-BA89-4C2D-BC91-12FB1D000585}.Universal Unicode Release|Win32.ActiveCfg = Release|Win32
 		{663208AE-BA89-4C2D-BC91-12FB1D000585}.Universal Unicode Release|Win32.Build.0 = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Debug|Win32.ActiveCfg = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Debug|Win32.Build.0 = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Debug|Win32.ActiveCfg = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Debug|Win32.Build.0 = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Release|Win32.ActiveCfg = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Release|Win32.Build.0 = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Unicode Debug|Win32.ActiveCfg = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Unicode Debug|Win32.Build.0 = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Unicode Release|Win32.ActiveCfg = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Unicode Release|Win32.Build.0 = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Debug|Win32.ActiveCfg = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Debug|Win32.Build.0 = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Release|Win32.ActiveCfg = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Release|Win32.Build.0 = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Unicode Debug|Win32.ActiveCfg = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Unicode Debug|Win32.Build.0 = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Unicode Release|Win32.ActiveCfg = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Unicode Release|Win32.Build.0 = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Release|Win32.ActiveCfg = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Release|Win32.Build.0 = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Unicode Debug|Win32.ActiveCfg = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Unicode Debug|Win32.Build.0 = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Unicode Release|Win32.ActiveCfg = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Unicode Release|Win32.Build.0 = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Debug|Win32.ActiveCfg = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Debug|Win32.Build.0 = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Release|Win32.ActiveCfg = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Release|Win32.Build.0 = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Unicode Debug|Win32.ActiveCfg = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Unicode Debug|Win32.Build.0 = Debug|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Unicode Release|Win32.ActiveCfg = Release|Win32
-		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Unicode Release|Win32.Build.0 = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Debug|Win32.ActiveCfg = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Debug|Win32.Build.0 = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Debug|Win32.ActiveCfg = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Debug|Win32.Build.0 = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Release|Win32.ActiveCfg = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Release|Win32.Build.0 = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Unicode Debug|Win32.ActiveCfg = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Unicode Debug|Win32.Build.0 = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Unicode Release|Win32.ActiveCfg = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Unicode Release|Win32.Build.0 = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Debug|Win32.ActiveCfg = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Debug|Win32.Build.0 = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Release|Win32.ActiveCfg = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Release|Win32.Build.0 = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Unicode Debug|Win32.ActiveCfg = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Unicode Debug|Win32.Build.0 = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Unicode Release|Win32.ActiveCfg = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Unicode Release|Win32.Build.0 = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Release|Win32.ActiveCfg = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Release|Win32.Build.0 = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Unicode Debug|Win32.ActiveCfg = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Unicode Debug|Win32.Build.0 = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Unicode Release|Win32.ActiveCfg = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Unicode Release|Win32.Build.0 = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Debug|Win32.ActiveCfg = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Debug|Win32.Build.0 = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Release|Win32.ActiveCfg = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Release|Win32.Build.0 = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Unicode Debug|Win32.ActiveCfg = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Unicode Debug|Win32.Build.0 = Debug|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Unicode Release|Win32.ActiveCfg = Release|Win32
-		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Unicode Release|Win32.Build.0 = Release|Win32
 		{EDC0A2BE-50FE-4DE2-ADD6-DC87F4FBCDCC}.Debug|Win32.ActiveCfg = Debug|Win32
 		{EDC0A2BE-50FE-4DE2-ADD6-DC87F4FBCDCC}.Debug|Win32.Build.0 = Debug|Win32
 		{EDC0A2BE-50FE-4DE2-ADD6-DC87F4FBCDCC}.DLL Debug|Win32.ActiveCfg = Debug|Win32
@@ -375,6 +311,70 @@ Global
 		{938C1BE6-F759-44BB-85C2-60FC413D5AD2}.Universal Unicode Debug|Win32.Build.0 = Debug|Win32
 		{938C1BE6-F759-44BB-85C2-60FC413D5AD2}.Universal Unicode Release|Win32.ActiveCfg = Release|Win32
 		{938C1BE6-F759-44BB-85C2-60FC413D5AD2}.Universal Unicode Release|Win32.Build.0 = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Debug|Win32.ActiveCfg = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Debug|Win32.Build.0 = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Debug|Win32.ActiveCfg = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Debug|Win32.Build.0 = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Release|Win32.ActiveCfg = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Release|Win32.Build.0 = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Unicode Debug|Win32.ActiveCfg = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Unicode Debug|Win32.Build.0 = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Unicode Release|Win32.ActiveCfg = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Unicode Release|Win32.Build.0 = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Debug|Win32.ActiveCfg = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Debug|Win32.Build.0 = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Release|Win32.ActiveCfg = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Release|Win32.Build.0 = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Unicode Debug|Win32.ActiveCfg = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Unicode Debug|Win32.Build.0 = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Unicode Release|Win32.ActiveCfg = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.DLL Universal Unicode Release|Win32.Build.0 = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Release|Win32.ActiveCfg = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Release|Win32.Build.0 = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Unicode Debug|Win32.ActiveCfg = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Unicode Debug|Win32.Build.0 = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Unicode Release|Win32.ActiveCfg = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Unicode Release|Win32.Build.0 = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Debug|Win32.ActiveCfg = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Debug|Win32.Build.0 = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Release|Win32.ActiveCfg = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Release|Win32.Build.0 = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Unicode Debug|Win32.ActiveCfg = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Unicode Debug|Win32.Build.0 = Debug|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Unicode Release|Win32.ActiveCfg = Release|Win32
+		{16326F94-522C-4C2A-9FCE-56828AF23C8B}.Universal Unicode Release|Win32.Build.0 = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Debug|Win32.ActiveCfg = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Debug|Win32.Build.0 = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Debug|Win32.ActiveCfg = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Debug|Win32.Build.0 = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Release|Win32.ActiveCfg = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Release|Win32.Build.0 = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Unicode Debug|Win32.ActiveCfg = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Unicode Debug|Win32.Build.0 = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Unicode Release|Win32.ActiveCfg = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Unicode Release|Win32.Build.0 = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Debug|Win32.ActiveCfg = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Debug|Win32.Build.0 = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Release|Win32.ActiveCfg = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Release|Win32.Build.0 = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Unicode Debug|Win32.ActiveCfg = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Unicode Debug|Win32.Build.0 = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Unicode Release|Win32.ActiveCfg = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.DLL Universal Unicode Release|Win32.Build.0 = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Release|Win32.ActiveCfg = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Release|Win32.Build.0 = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Unicode Debug|Win32.ActiveCfg = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Unicode Debug|Win32.Build.0 = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Unicode Release|Win32.ActiveCfg = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Unicode Release|Win32.Build.0 = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Debug|Win32.ActiveCfg = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Debug|Win32.Build.0 = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Release|Win32.ActiveCfg = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Release|Win32.Build.0 = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Unicode Debug|Win32.ActiveCfg = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Unicode Debug|Win32.Build.0 = Debug|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Unicode Release|Win32.ActiveCfg = Release|Win32
+		{45AFC99C-232B-45F6-B0D8-6697D4306366}.Universal Unicode Release|Win32.Build.0 = Release|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
